{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 112,
  "lineage": "dcc2721b-45d4-f401-6dfe-718d7824f415",
  "resources": [
    {
      "module": "module.bigpro_subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-20T18:06:25.736-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/studidevops-bigpro-fakhri/regions/us-central1/subnetworks/bigpro-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "bigpro-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "studidevops-bigpro-fakhri",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/regions/us-central1/subnetworks/bigpro-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.bigpro_vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
            "mtu": 0,
            "name": "bigpro-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "studidevops-bigpro-fakhri",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc"
          }
        }
      ]
    },
    {
      "module": "module.devops_bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230616",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/zones/us-central1-a/disks/bastion-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "desired_status": "TERMINATED",
            "enable_display": false,
            "id": "projects/studidevops-bigpro-fakhri/zones/us-central1-a/instances/bastion-instance",
            "instance_id": "1650738140375151564",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "fakhri:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMKsCC8rJUvA8jwemWvMdk2RQ0VheM71DAXqi6tCqg8R8+DUp9p76GudmKOlIe/PnagAaJYTDSQDGujKfugiUObVDOlVrDL8wKrz3sTsXXeg7K8JUiDC4EAYrgf+MW2ETCf2mTKxF30pdU+7ZOLBKwH45spT1ZNyHOHpybG+k859zVzY87XKDsrPL8S1wfe6eET6TrXHuRPyPAkYqbLYseQtu2Ua132NioNcW68So356HTEsRHQrHnc7xHSFol+8NfGy/QRPiTy5zvYhqA8LzolX6K56I3nIA7dQ20GqxrKD+JtZPKEftRYQhPEqvlwPrD6vFV16ZImixNfT6108kbqxYjkbJFB9KK91D1PE2rQovJmYmAzQE8FEK4H7uIwfdr73wdlO0LmGmjopzUpEIxXrysUfhUItW48LjqZgxOxG [...]
            },
            "metadata_fingerprint": "xWJ1DgECsr0=",
            "name": "bastion-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/regions/us-central1/subnetworks/bigpro-subnet",
                "subnetwork_project": "studidevops-bigpro-fakhri"
              }
            ],
            "project": "studidevops-bigpro-fakhri",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/zones/us-central1-a/instances/bastion-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-ssh"
            ],
            "tags_fingerprint": "LfyOV3jN6cE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.bigpro_subnet.google_compute_subnetwork.subnet",
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.grafana_firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-20T23:19:31.811-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studidevops-bigpro-fakhri/global/firewalls/allow-grafana",
            "log_config": [],
            "name": "allow-grafana",
            "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
            "priority": 1000,
            "project": "studidevops-bigpro-fakhri",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/firewalls/allow-grafana",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-grafana"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.http_firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-20T20:06:17.207-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studidevops-bigpro-fakhri/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
            "priority": 1000,
            "project": "studidevops-bigpro-fakhri",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-20T23:19:31.816-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studidevops-bigpro-fakhri/global/firewalls/allow-jenkins",
            "log_config": [],
            "name": "allow-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
            "priority": 1000,
            "project": "studidevops-bigpro-fakhri",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/firewalls/allow-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230616",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/zones/us-central1-a/disks/jenkins-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "desired_status": "RUNNING",
            "enable_display": false,
            "id": "projects/studidevops-bigpro-fakhri/zones/us-central1-a/instances/jenkins-instance",
            "instance_id": "8905121796638845730",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "fakhri:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMKsCC8rJUvA8jwemWvMdk2RQ0VheM71DAXqi6tCqg8R8+DUp9p76GudmKOlIe/PnagAaJYTDSQDGujKfugiUObVDOlVrDL8wKrz3sTsXXeg7K8JUiDC4EAYrgf+MW2ETCf2mTKxF30pdU+7ZOLBKwH45spT1ZNyHOHpybG+k859zVzY87XKDsrPL8S1wfe6eET6TrXHuRPyPAkYqbLYseQtu2Ua132NioNcW68So356HTEsRHQrHnc7xHSFol+8NfGy/QRPiTy5zvYhqA8LzolX6K56I3nIA7dQ20GqxrKD+JtZPKEftRYQhPEqvlwPrD6vFV16ZImixNfT6108kbqxYjkbJFB9KK91D1PE2rQovJmYmAzQE8FEK4H7uIwfdr73wdlO0LmGmjopzUpEIxXrysUfhUItW48LjqZgxOxG [...]
            },
            "metadata_fingerprint": "xWJ1DgECsr0=",
            "name": "jenkins-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.165.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/regions/us-central1/subnetworks/bigpro-subnet",
                "subnetwork_project": "studidevops-bigpro-fakhri"
              }
            ],
            "project": "studidevops-bigpro-fakhri",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/zones/us-central1-a/instances/jenkins-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-jenkins",
              "allow-ssh"
            ],
            "tags_fingerprint": "UUHuzXDUdY8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.bigpro_subnet.google_compute_subnetwork.subnet",
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-20T18:06:25.661-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studidevops-bigpro-fakhri/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/networks/bigpro-vpc",
            "priority": 1000,
            "project": "studidevops-bigpro-fakhri",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studidevops-bigpro-fakhri/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bigpro_vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}